# nrf52-hal

examples/nfct-demo/: Cargo.toml
examples/nfct-demo/src/: main.rs
nrf-hal-common/src/: lib.rs  nfct.rs
