[package]
name = "nfct-demo"
version = "0.1.0"
authors = ["Jonas Schievink"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.13"
rtt-target = {version = "0.2.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
nrf52840-hal = { features = ["rt"], path = "../../nrf52840-hal" }
irq = "0.2.3"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]
